<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.infinum.povexampleapp.MainActivity">

    <Button
        android:id="@+id/btn_open_common_usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_common_usage" />

    <Button
        android:id="@+id/btn_open_call_usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_call_usage"/>

    <Button
        android:id="@+id/btn_open_custom_parser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_custom_parser" />

    <Button
        android:id="@+id/btn_open_stream_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_stream_example" />

    <Button
        android:id="@+id/btn_open_google_inapp_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_in_app_updates" />
</LinearLayout>
